--- a/sites/all/themes/d7td/css/style.css
+++ b/sites/all/themes/d7td/css/style.css
@@ -25,3 +25,9 @@ a {
   background: #DDD0C7;
   border: 1px solid #837A6D;
 }
+#header #site-name a {
+  text-decoration: none;
+}
+#navigation a {
+  text-decoration: none;
+}
